<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_heading"
        android:title="@string/menu_header_name"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/DEFAULT"
                android:title="@string/text_color_default" />
            <item
                android:id="@+id/RED"
                android:title="@string/text_color_1" />
            <item
                android:id="@+id/BLUE"
                android:title="@string/text_color_2" />
            <item
                android:id="@+id/GREEN"
                android:title="@string/text_color_3" />


        </menu>

    </item>

</menu>